--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "core-js": "^3.8.0",
@@ -24,7 +25,8 @@
     "helmet": "^3.23.3",
     "mongoose": "^5.11.0",
     "regenerator-runtime": "^0.13.7",
-    "style-loader": "^1.3.0"
+    "style-loader": "^1.3.0",
+    "validator": "^13.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
